# AcordesApp

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  GAMEPAD.md  GEMINI.md  IMPLEMENTATION_CHECKLIST.md  KEYBINDS.md  LICENSE  MACOS_SETUP.md  MULTI_DRUM_MIXING_FIX.md  PLAN_v1.5.0.md  README.md  TAMBOR_FIXES_SUMMARY.md  config_manager.py  generate_compendium_data.py  main.py  pyproject.toml  requirements-windows.txt  requirements.txt  run-ostra.sh  run.bat  run.ps1  run.sh  test_audio_quality.py  test_compendium_data.py  test_critical_fixes.py  test_multi_drum_mixing.py
arm/: run-ostra.sh
arm_ui/: app.py  fb0_writer.py  keyboard_handler.py  theme.py
arm_ui/screens/: loading.py  main_menu.py  stub.py  synth.py
arm_ui/widgets/: bar_display.py
components/: chord_display.py  confirmation_dialog.py  header_widget.py  piano_widget.py  staff_widget.py
data/compendium/: categories.json  chords.json  genres.json  instruments.json  modes.json  scales.json
docs/: MIDI_SYNCHRONIZATION.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  TESTING_MIDI_SYNC.md  UI_BOX_LAYOUT.md  UI_FINAL_UPDATES.md  UI_LAYOUT_FIX.md  UI_REDESIGN_SUMMARY.md
gamepad/: evdev_backend.py  input_handler.py
midi/: device_manager.py  input_handler.py
modes/: compendium_mode.py  config_mode.py  main_menu_mode.py  metronome_mode.py  piano_mode.py  synth_mode.py
modes/tambor/: tambor_mode.py
modes/tambor/components/: drum_editor.py  fill_selector.py  header_widget.py  pattern_selector.py
modes/tambor/music/: acordes_synth_adapter.py  audio_thread.py  drum_presets.py  drum_synth.py  drum_voice_manager.py  fill_presets.py  humanize.py  pattern_manager.py  pre_scale.py  sequencer_engine.py  timing_modes.py
music/: chord_detector.py  chord_library.py  engine_proxy.py  factory_presets.py  flexasio_config.py  preset_manager.py  synth_engine.py  velocity_curves.py
presets/: bright_saw_lead.json  calmo_tone.json  church_organ.json  crystal_drift.json  deep_bass.json  default.json  escuro_tone.json  frozen_pad.json  gentle_onda.json  glass_bells.json  hollow_reed.json  plucky_square.json  soft_strings.json  velado_bass.json  vintage_synth.json  warm_pad.json
visualizer/: __init__.py  visualizer_window.py  window_position.json
