[project]
name = "acordes"
version = "1.8.0"
description = "A professional polyphonic MIDI synthesizer and piano TUI application"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jorge" }]
keywords = ["midi", "synthesizer", "piano", "tui", "music"]

dependencies = [
    "textual>=0.75.0",
    "mido>=1.3.0",
    "python-rtmidi>=1.4.0",
    "pygame>=2.0.0; sys_platform != 'linux' or (platform_machine != 'armv7l' and platform_machine != 'aarch64')",
    "mingus>=0.6.1",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "scipy>=1.10.0",
]

[tool.uv]
# Check all indexes and prefer binary wheels over source distributions.
# Required for piwheels: default "first-index" strategy stops at PyPI
# sdists and never checks piwheels for pre-built ARM wheels.
index-strategy = "unsafe-best-match"
# python-rtmidi uses meson-python which needs system ninja. Disabling
# build isolation lets the build process find /usr/bin/ninja on ARM.
# cffi needs libffi-dev headers visible during its C extension build.
no-build-isolation-package = ["python-rtmidi", "cffi"]

[[tool.uv.index]]
name = "piwheels"
url = "https://www.piwheels.org/simple"
explicit = false

