[project]
name = "acordes"
version = "1.8.0"
description = "A professional polyphonic MIDI synthesizer and piano TUI application"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jorge" }]
keywords = ["midi", "synthesizer", "piano", "tui", "music"]

dependencies = [
    "textual>=0.75.0",
    "mido>=1.3.0",
    "python-rtmidi>=1.4.0",
    "pygame>=2.0.0; sys_platform != 'linux' or (platform_machine != 'armv7l' and platform_machine != 'aarch64')",
    "mingus>=0.6.1",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "scipy>=1.10.0",
]

[tool.uv]
# python-rtmidi uses meson-python which needs system ninja. Disabling
# build isolation lets the build process find the system ninja on ARM Linux.
# On Windows/macOS/x86 Linux, python-rtmidi ships pre-built wheels so this
# setting has no effect there.
# piwheels (ARM pre-built wheels) is handled at runtime by run.sh via pip,
# not here, so it does not pollute the Windows/macOS resolver.
no-build-isolation-package = ["python-rtmidi"]

