[project]
name = "acordes"
version = "1.8.0"
description = "A professional polyphonic MIDI synthesizer and piano TUI application"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
authors = [{ name = "Jorge" }]
keywords = ["midi", "synthesizer", "piano", "tui", "music"]

dependencies = [
    "textual>=0.75.0",
    "mido>=1.3.0",
    "python-rtmidi>=1.4.0",
    "pygame>=2.0.0; sys_platform != 'linux' or (platform_machine != 'armv7l' and platform_machine != 'aarch64')",
    "mingus>=0.6.1",
    # On Raspbian 11 (Bullseye, glibc 2.31) piwheels only has 1.x wheels.
    # numpy 2.x and scipy 1.14+ require glibc 2.34 (Debian 12 Bookworm).
    "numpy>=1.24.0,<2.0; platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    "numpy>=1.24.0; platform_machine != 'armv7l' and platform_machine != 'aarch64'",
    "sounddevice>=0.4.6",
    "scipy>=1.10.0,<1.14.0; platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    "scipy>=1.10.0; platform_machine != 'armv7l' and platform_machine != 'aarch64'",
    # uvloop: faster asyncio event loop (libuv-based). ARM Linux only - not available
    # on Windows, and not needed on desktop where the default loop is fast enough.
    "uvloop>=0.17.0; sys_platform == 'linux' and (platform_machine == 'armv7l' or platform_machine == 'aarch64')",
]

[tool.setuptools]
# Acordes is a runnable script, not an installable library.
# Explicitly set empty packages to prevent setuptools auto-discovery
# from failing on our flat multi-directory layout.
packages = []

[tool.uv]
# python-rtmidi uses meson-python which needs system ninja. Disabling
# build isolation lets the build process find the system ninja on ARM Linux.
# On Windows/macOS/x86 Linux, python-rtmidi ships pre-built wheels so this
# setting has no effect there.
# piwheels (ARM pre-built wheels) is handled at runtime by run.sh via pip,
# not here, so it does not pollute the Windows/macOS resolver.
no-build-isolation-package = ["python-rtmidi"]

